加入正则表达式的支持

--- a/HyperPlatform/HyperPlatform.vcxproj
+++ b/HyperPlatform/HyperPlatform.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="driver.cpp" />
     <ClCompile Include="ept.cpp" />
     <ClCompile Include="FakePage.cpp" />
+    <ClCompile Include="fuzz\fuzz.cpp" />
     <ClCompile Include="hotplug_callback.cpp" />
     <ClCompile Include="include\exclusivity.cpp" />
     <ClCompile Include="include\global.cpp" />
@@ -133,6 +134,26 @@
     <ClCompile Include="minirtl\_strstri.c" />
     <ClCompile Include="performance.cpp" />
     <ClCompile Include="power_callback.cpp" />
+    <ClCompile Include="regex\pcre_byte_order.c" />
+    <ClCompile Include="regex\pcre_chartables.c" />
+    <ClCompile Include="regex\pcre_compile.c" />
+    <ClCompile Include="regex\pcre_config.c" />
+    <ClCompile Include="regex\pcre_dfa_exec.c" />
+    <ClCompile Include="regex\pcre_exec.c" />
+    <ClCompile Include="regex\pcre_fullinfo.c" />
+    <ClCompile Include="regex\pcre_get.c" />
+    <ClCompile Include="regex\pcre_globals.c" />
+    <ClCompile Include="regex\pcre_maketables.c" />
+    <ClCompile Include="regex\pcre_newline.c" />
+    <ClCompile Include="regex\pcre_ord2utf8.c" />
+    <ClCompile Include="regex\pcre_refcount.c" />
+    <ClCompile Include="regex\pcre_string_utils.c" />
+    <ClCompile Include="regex\pcre_study.c" />
+    <ClCompile Include="regex\pcre_tables.c" />
+    <ClCompile Include="regex\pcre_ucd.c" />
+    <ClCompile Include="regex\pcre_valid_utf8.c" />
+    <ClCompile Include="regex\pcre_version.c" />
+    <ClCompile Include="regex\pcre_xclass.c" />
     <ClCompile Include="service_hook.cpp" />
     <ClCompile Include="systemcall.cpp" />
     <ClCompile Include="util.cpp" />
@@ -148,6 +169,7 @@
     <ClInclude Include="ept.h" />
     <ClInclude Include="error_bugcheck.h" />
     <ClInclude Include="FakePage.h" />
+    <ClInclude Include="fuzz\fuzz.h" />
     <ClInclude Include="global_object.h" />
     <ClInclude Include="hotplug_callback.h" />
     <ClInclude Include="ia32_type.h" />
@@ -177,6 +199,10 @@
     <ClInclude Include="performance.h" />
     <ClInclude Include="perf_counter.h" />
     <ClInclude Include="power_callback.h" />
+    <ClInclude Include="regex\config.h" />
+    <ClInclude Include="regex\pcre.h" />
+    <ClInclude Include="regex\pcre_internal.h" />
+    <ClInclude Include="regex\pcre_regex.h" />
     <ClInclude Include="service_hook.h" />
     <ClInclude Include="systemcall.h" />
     <ClInclude Include="util.h" />
