--- a/HyperPlatform/HyperPlatform.vcxproj.filters
+++ b/HyperPlatform/HyperPlatform.vcxproj.filters
@@ -397,6 +397,9 @@
     <ClInclude Include="regex\pcre_internal.h">
       <Filter>regex</Filter>
     </ClInclude>
+    <ClInclude Include="include\algorithm.hpp">
+      <Filter>STL</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="HyperPlatform.ruleset" />
