--- a/HyperPlatform/HyperPlatform.vcxproj.filters
+++ b/HyperPlatform/HyperPlatform.vcxproj.filters
@@ -409,6 +409,9 @@
     <ClInclude Include="include\algorithm.hpp">
       <Filter>STL</Filter>
     </ClInclude>
+    <ClInclude Include="include\hashtable.hpp">
+      <Filter>STL</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="HyperPlatform.ruleset" />
